# O-M-Monte-Carlo

./: PIPELINE_SUMMARY.md  QUICKSTART.md  README.md  VALIDATION_RESULTS.md  pyproject.toml  requirements.txt  temporal_validation.py  test_setup.py
data/: daily_data.csv  engineered_features.csv  labeled_days.csv  mc_results.csv  production_predictions.csv
data/Data/: Energy_generation_2024_01_31.csv  Energy_generation_2024_02_29.csv  Energy_generation_2024_03_31.csv  Energy_generation_2024_04_30.csv  Energy_generation_2024_05_31.csv  Energy_generation_2024_06_30.csv  Energy_generation_2024_07_31.csv  Energy_generation_2024_08_31.csv  Energy_generation_2024_09_30.csv  Energy_generation_2024_10_31.csv  Energy_generation_2024_11_30.csv  Energy_generation_2024_12_31.csv  Energy_generation_2025_01_31.csv  Energy_generation_2025_02_28.csv  Energy_generation_2025_03_31.csv  Energy_generation_2025_04_30.csv  Energy_generation_2025_05_31.csv  Energy_generation_2025_06_30.csv  Energy_generation_2025_07_31.csv  Energy_generation_2025_08_31.csv  Energy_generation_2025_09_30.csv  Energy_generation_2025_10_31.csv  Energy_generation_2025_11_30.csv  Energy_generation_2025_12_31.csv
models/: anomaly_rf.pkl  model_metadata.pkl
notebooks/: 01_phase1_physics_baseline.ipynb  02_phase2_feature_engineering.ipynb  03_phase3_manual_labeling.ipynb  04_phase4_rf_training.ipynb  05_phase5_production_testing.ipynb
src/: __init__.py  data_loader.py
src/O_M_Monte_Carlo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/phase1_physics/: __init__.py  monte_carlo.py
(+8 files in other folders)
