[project]
name = "O-M-Monte-Carlo"
version = "0.1.0"
description = "5-phase Monte Carlo-based solar anomaly detection prototype"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "jupyter>=1.0.0",
    "ipython>=7.25.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
